--- a/css/works.css
+++ b/css/works.css
@@ -12,4 +12,5 @@
     min-height: 40px;
     min-width: 80px;
     text-align: center;
+    padding-top: .5rem;
 }
